# james-useful-home-robot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTIC_FIX_NOTES.md  GITHUB_SETUP.md  LICENSE  MCP_QUICK_START.md  PUBLISH_CHECKLIST.md  README.md  REAL_ISSUE_ANALYSIS.md  SEMI_REBOOT_DEPLOYMENT_CHECKLIST.md  SEMI_REBOOT_IMPLEMENTATION_SUMMARY.md  TEENSY_STUCK_DIAGNOSIS_SUMMARY.md  TROUBLESHOOT_MCP.md  XJ_BUG_INVESTIGATION_COMPLETE.md  XJ_BUG_TEST_GUIDE.md  XJ_TEST_QUICK_START.md  calculate_fk.py  calculate_fk_normalized.py  check_teensy_connection.py  debug_kinematics.py  debug_xj_limits.py  debug_z_height.py  diagnose_j4_calculation.py  diagnose_j4_real_case.py  diagnose_teensy_state.py  git_history.txt  git_history_4.txt  git_history_utf8.txt  recover_from_xj_limit.py  requirements.txt  reverse_engineer_j4stepm.py  send_limit_config.py  simulate_z_fix.py  sweep_kinematics.py  test_bridge_command.py  test_xj_bug_reproduction.py  tmp_diff.txt  validate_fix.py
ros2_ws/src/james_manipulation/: TASK3_COMPLETION_SUMMARY.md  package.xml  setup.cfg  setup.py
ros2_ws/src/james_manipulation/config/: ARconfig.json  arm_cartesian_params.yaml
ros2_ws/src/james_manipulation/config/moveit/: controllers.yaml  joint_limits.yaml  kinematics.yaml  (+3 more)
ros2_ws/src/james_manipulation/james_manipulation/: arm_cartesian_controller.py  arm_servo_controller.py  calibrate_arm.py  platform_serial_bridge.py  send_teensy_cmd.py  teensy_serial_bridge.py
ros2_ws/src/james_manipulation/launch/: arm_cartesian_control.launch.py  arm_servo_control.launch.py  moveit.launch.py  visualize.launch.py
ros2_ws/src/james_manipulation/scripts/: check_urdf_limits.py  diagnostic_joint_move.py  investigate_smoothing.py  servo_flow_debugger.py  sim_joystick.py  verify_cartesian_movement.py  verify_kinematics.py  verify_smoothing.py
ros2_ws/src/james_slam/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/james_slam/config/: rtabmap_d435_only.yaml  rtabmap_params.yaml
ros2_ws/src/james_slam/docs/: map_quality_monitoring.md
ros2_ws/src/james_slam/launch/: rtabmap.launch.py  rtabmap_d435_only.launch.py  rtabmap_with_monitoring.launch.py  view_map.launch.py
ros2_ws/src/james_slam/scripts/: map_quality_monitor.py  test_map_quality_monitor.py  tf_bridge.py
(+185 files in other folders)
